# screen-bridge

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
config/: host.example.toml  viewer.example.toml
crates/screen-bridge-core/: Cargo.toml
crates/screen-bridge-core/src/: lib.rs  logging.rs  net.rs  runtime.rs  secret.rs
crates/screen-bridge-core/src/config/: host.rs  mod.rs  validate.rs  viewer.rs
crates/screen-bridge-host/: Cargo.toml
crates/screen-bridge-host/examples/: rtsp-smoke.rs
crates/screen-bridge-host/src/: auth.rs  cli.rs  diagnose.rs  lib.rs  main.rs  peer_ip.rs  pipeline.rs  server.rs  session_limit.rs  subnet_guard.rs  url.rs
crates/screen-bridge-viewer/: Cargo.toml
crates/screen-bridge-viewer/src/: cli.rs  lib.rs  main.rs  pipeline.rs  run.rs
installer/: allow-host-firewall.cmd  launch-host.cmd  launch-viewer.cmd  screenbridge.iss
scripts/: add-firewall-rule.ps1  build-installer.ps1  check-gstreamer.ps1  env-gstreamer.ps1  smoke-local-capture.ps1  smoke-rtsp-server.ps1
