[workspace]
members = [
    "crates/screen-bridge-core",
    "crates/screen-bridge-host",
    "crates/screen-bridge-viewer",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.93"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
ctrlc = "3"
gstreamer-rtsp-server = "0.25"
if-addrs = "0.15.0"
ipnet = "2.12.0"
serde = { version = "1.0.228", features = ["derive"] }
screen-bridge-core = { path = "crates/screen-bridge-core" }
thiserror = "2.0.18"
toml = "1.1.2"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
