[package]
name = "screen-bridge-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "screen-bridge-host"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
ctrlc.workspace = true
gstreamer-rtsp-server.workspace = true
screen-bridge-core.workspace = true
