[package]
name = "screen-bridge-viewer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "screen-bridge-viewer"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
ctrlc.workspace = true
gstreamer.workspace = true
screen-bridge-core.workspace = true
tracing.workspace = true
